--- a/netflix-clone/src/App.css
+++ b/netflix-clone/src/App.css
@@ -15,3 +15,7 @@ a {
     --color-white: rgb(220, 218, 218);
     --color-background: rgb(17, 17, 17);
 }
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+}
